fix: support null criteria parameter bindings